testcases/negative/inspect-depth-negative.otk
OFFICETALK/1.0
DOCTYPE word

INSPECT body/heading
  DEPTH -1
